docs(memory): exhaustive javadoc + mark ChatMemory.saveAll deprecated
Expanded javadoc on every class, method, and field in javaclaw-memory —
the ChatMemory port, JdbcChatMemory adapter, ChatMemoryEntry record and
its repository, InMemoryChatMemory, and the auto-configuration. Each
method now documents its parameters, return value, ordering guarantee,
and transactional scope where relevant.

Marked ChatMemory#saveAll as @Deprecated with a prominent warning: it is
a destructive delete-then-append that wipes conversation history
wholesale, defeating the purpose of chat memory. Production code must
use appendAll for normal writes and deleteByConversationId for explicit
resets. The method is retained only to honor adapter-contract tests,
which now suppress the deprecation warning at the appropriate scope.

Aligned InMemoryChatMemory with the port contract (drift uncovered while
writing tests): appendAll(id, null|[]) is now a no-op instead of lazily
creating an empty entry that leaked into findConversationIds, and
saveAll is reimplemented as deleteByConversationId + appendAll so that
saveAll(id, []) removes the conversation entirely — matching both the
port contract and JdbcChatMemory's observable behavior.

Added InMemoryChatMemoryTest with 25 tests reaching 100% instruction,
branch, line and method coverage on InMemoryChatMemory: no-op handling
of null/empty writes, append-order preservation, conversation isolation,
immutable defensive copies on reads, delete-then-append semantics of
saveAll, and idempotent deletes.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>